changed words order

--- a/school-program/index.html
+++ b/school-program/index.html
@@ -83,7 +83,7 @@
           </u>
         </td>
         <td>Σχέδιο</td>
-        <td>Σύνθεση/Μηχανολογία</td>
+        <td>Μηχανολογία/Σύνθεση</td>
         <td>Ερ Εργασία/Πληροφορική</td>
         <td>Φυσική</td>
         <td>Ερ Εργασία/Πληροφορική</td>
