--- a/school-program/index.html
+++ b/school-program/index.html
@@ -129,9 +129,10 @@
         This school program was created by <strong>John Giomilas (github.com/johngiomilas)</strong>
       </h6>
 
-
+      
       <ul>
         <li><a href="https://users.sch.gr/jabatzo/files/yliko/live%20ebooks/arxes_ilektrologias_A_2018_final/index.html" class="hlek" target="_blank">Ηλεκτρολογία</a></li>
+        <!-- TROLL OPTIONS -->
         <li><a href="https://fakeupdate.net/win10ue/" class="update" target="_blank">1</a></li>
         <li><a href="./jamal.png" class="jamal" target="_blank">2</a></li>
         <li><a href="./audio.mp3" class="jamal" target="_blank">3</a></li>
