--- a/school-program/index.html
+++ b/school-program/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>1ο ΕΠΑΛ Μυτιλήνης</title>
-    <link rel="icon" href="./image.png">
+    <link rel="icon" href="./images/header.png">
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
@@ -134,7 +134,7 @@
         <li><a href="https://users.sch.gr/jabatzo/files/yliko/live%20ebooks/arxes_ilektrologias_A_2018_final/index.html" class="hlek" target="_blank">Ηλεκτρολογία</a></li>
         <!-- TROLL OPTIONS -->
         <li><a href="https://fakeupdate.net/win10ue/" class="update" target="_blank">1</a></li>
-        <li><a href="./jamal.png" class="jamal" target="_blank">2</a></li>
+        <li><a href="./images/jamal.png" class="jamal" target="_blank">2</a></li>
         <li><a href="./audio.mp3" class="jamal" target="_blank">3</a></li>
       </ul>
       
