--- a/school-program/index.html
+++ b/school-program/index.html
@@ -82,11 +82,11 @@
             <strong>10:50 - 11:25</strong>
           </u>
         </td>
-        <td>Αγγλικά</td>
+        <td>Αγγλικά Πληρ.</td>
         <td>Άλγεβρα</td>
         <td>Υλικό Υπολογιστών</td>
         <td>Ιστοτόποι</td>
-        <td>Άγγλικά</td>
+        <td>Άγγλικά Γεν.</td>
       </tr>
       <tr>
         <td>
