--- a/school-program/index.html
+++ b/school-program/index.html
@@ -47,8 +47,8 @@
           </u>
         </td>
         <td>Ιστοτόποι</td>
-        <td>Δίκτυα Υπολογιστών</td>
-        <td>Β.Θ.Π</td>
+        <td>Δίκτυα</td>
+        <td>Β.Θ.Π Ε</td>
         <td>Λειτουργικά Συστήματα</td>
         <td>Γεωμετρία</td>
       </tr>
@@ -60,9 +60,9 @@
         </td>
         <td>Ιστοτόποι</td>
         <td>Νέα Ελληνικά</td>
-        <td>Β.Θ.Π</td>
+        <td>Β.Θ.Π Ε</td>
         <td>Λειτουργικά Συστήματα</td>
-        <td>Πληροφορική Γενικής</td>
+        <td>Πληροφορική</td>
       </tr>
       <tr>
         <td>
@@ -84,7 +84,7 @@
         </td>
         <td>Αγγλικά Πληρ.</td>
         <td>Άλγεβρα</td>
-        <td>Υλικό Υπολογιστών</td>
+        <td>Υλικό</td>
         <td>Ιστοτόποι</td>
         <td>Άγγλικά Γεν.</td>
       </tr>
@@ -96,7 +96,7 @@
         </td>
         <td>Προγραμματισμός Ε</td>
         <td>Λειτουργικά Συστήματα</td>
-        <td>Υλικό Υπολογιστών</td>
+        <td>Υλικό</td>
         <td>Φυσική</td>
         <td>Τ.Θ.Π</td>
       </tr>
@@ -108,7 +108,7 @@
         </td>
         <td>Προγραμματισμός Ε</td>
         <td>Τ.Θ.Π</td>
-        <td>Γυμναστική</td>
+        <td>Β.Θ.Π Θ</td>
         <td>Άλγεβρα</td>
         <td>Προγραμματισμός Θ</td>
       </tr>
@@ -122,7 +122,7 @@
         <td>Τ.Θ.Π</td>
         <td>Θρησκευτικά</td>
         <td>Χημεία</td>
-        <td>Δίκτυα Υπολογιστών</td>
+        <td>Δίκτυα</td>
       </font>
 </body>
 
