--- a/school-program/index.html
+++ b/school-program/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>1ο ΕΠΑΛ Μυτιλήνης</title>
-  <link rel="icon" href="image.png">
+  <link rel="icon" href="header.png">
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -32,7 +32,9 @@
           </u>
         </th>
         <th>
-          <u><strong>Πέμπτη</strong></u>
+          <u>
+            <strong>Πέμπτη</strong>
+          </u>
         </th>
         <th>
           <u>
@@ -46,11 +48,11 @@
             <strong>8:30 - 9:10</strong>
           </u>
         </td>
-        <td>Ιστοτόποι</td>
-        <td>Δίκτυα</td>
-        <td>Β.Θ.Π Ε</td>
-        <td>Λειτουργικά Συστήματα</td>
-        <td>Γεωμετρία</td>
+        <td>Βασικά Θέματατα Ε</td>
+        <td>Ιστοσελίδες</td>
+        <td>Ιστοσελίδες</td>
+        <td>Τεχνικές Πωλήσεων Ε</td>
+        <td>Νέα Ελληνικά</td>
       </tr>
       <tr>
         <td>
@@ -58,11 +60,11 @@
             <strong>9:15 - 9:55</strong>
           </u>
         </td>
-        <td>Ιστοτόποι</td>
-        <td>Νέα Ελληνικά</td>
-        <td>Β.Θ.Π Ε</td>
-        <td>Λειτουργικά Συστήματα</td>
-        <td>Πληροφορική</td>
+        <td>Βασικά Θέματατα Ε</td>
+        <td>Ιστοσελίδες</td>
+        <td>Ιστοσελίδες</td>
+        <td>Τεχνικές Πωλήσεων Ε</td>
+        <td>Άγγλικά Γ</td>
       </tr>
       <tr>
         <td>
@@ -70,11 +72,11 @@
             <strong>10:05 - 10:45</strong>
           </u>
         </td>
-        <td>Βασικά Θέματατα</td>
-        <td>Νέα Ελληνικά</td>
-        <td>Γυμναστική</td>
-        <td>Ιστοτόποι</td>
-        <td>Νέα Ελληνικά</td>
+        <td>Βασικά Θέματατα Θ</td>
+        <td>Υλικό</td>
+        <td>Δίκτυα</td>
+        <td>Τεχνικές Πωλήσεων Θ</td>
+        <td>Πληροφορική</td>
       </tr>
       <tr>
         <td>
@@ -82,11 +84,11 @@
             <strong>10:50 - 11:25</strong>
           </u>
         </td>
-        <td>Αγγλικά Πληρ.</td>
-        <td>Άλγεβρα</td>
+        <td>Γυμναστική</td>
         <td>Υλικό</td>
-        <td>Ιστοτόποι</td>
-        <td>Άγγλικά Γεν.</td>
+        <td>Python Θ</td>
+        <td>Βασικά Θέματατα Θ</td>
+        <td>Χημεία</td>
       </tr>
       <tr>
         <td>
@@ -94,11 +96,11 @@
             <strong>11:30 - 12:10</ strong>
           </u>
         </td>
-        <td>Προγραμματισμός Ε</td>
-        <td>Λειτουργικά Συστήματα</td>
-        <td>Υλικό</td>
+        <td>Γεωμετρία</td>
+        <td>Άλγεβρα</td>
+        <td>Python Ε</td>
         <td>Φυσική</td>
-        <td>Τ.Θ.Π</td>
+        <td>Λειτουργικά Θ</td>
       </tr>
       <tr>
         <td>
@@ -106,11 +108,11 @@
             <strong>12:15 - 12:55</strong>
           </u>
         </td>
-        <td>Προγραμματισμός Ε</td>
-        <td>Τ.Θ.Π</td>
-        <td>Β.Θ.Π Θ</td>
-        <td>Άλγεβρα</td>
-        <td>Προγραμματισμός Θ</td>
+        <td>Νεα Ελληνικά</td>
+        <td>Λειτουργικά Ε</td>
+        <td>Python Ε</td>
+        <td>Θρησκευτικά</td>
+        <td>Δίκτυα</td>
       </tr>
       <tr>
         <td>
@@ -118,11 +120,11 @@
             <strong>13:00 - 13:35</strong>
           </u>
         </td>
-        <td>Προγραμματισμός Ε</td>
-        <td>Τ.Θ.Π</td>
-        <td>Θρησκευτικά</td>
-        <td>Χημεία</td>
-        <td>Δίκτυα</td>
+        <td>Νεα Ελληνικά</td>
+        <td>Λειτουργικά Ε</td>
+        <td>Python Ε</td>
+        <td>Άλγεβρα</td>
+        <td>Αγγλικά Π</td>
       </font>
 </body>
 
